# wowhc-launcher

./: .gitignore  CMakeLists.txt  README.md  app.manifest  app.rc  build.bat  build_release.bat  google_drive.cpp  google_drive.h  main.cpp  replay_buffer.cpp  replay_buffer.h  replay_ui.cpp  replay_ui.h  upload_window.cpp  upload_window.h
.github/workflows/: release.yml
ui/: app.jsx  data.jsx  index.html  theme.json
